[tool.cibuildwheel]
# Skip building on CPython 3.6 on all platforms
skip = ["cp36-*","cp310-macosx_x86_64","pp*"]

[tool.cibuildwheel.macos]
before-all = "brew reinstall gcc"

[project]
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake>=3.18", "ninja", "numpy>=1.21"]
